# compilador-julang

./: .gitignore  CMakeLists.txt  Compiler.cpp  Compiler.h  README.md  crivo.ju  interpreter.cpp  interpreter.h  main.cpp  parser.y  scanner.l  teste_calculadora.ju
back/: Assembler.cpp  Assembler.h  Compiler.cpp  Compiler.h
expressions/: expression.cpp  expression.h
front/: parser.y  scanner.h  scanner.l
statements/: AssignmentStatement.cpp  AssignmentStatement.h  DeclareArrayStatement.cpp  DeclareArrayStatement.h  DeclareScalarStatement.cpp  DeclareScalarStatement.h  DeleteStatement.cpp  DeleteStatement.h  IfStatement.cpp  IfStatement.h  WhileStatement.cpp  WhileStatement.h  statement.h  statements.h
